卡房、展示框物资箱、私有物资箱